# FastAPI-project-template

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/database/: config_db.py  db.py
src/app/database/models/: articles.py  articles_model.py  authors.py  authors_model.py
src/app/database/schemas/: author_schema.py
src/app/routers/: articles_route.py  authors_route.py
src/app/schemas/: __init__.py  article_schema.py  author_schema.py
