[project]
name = "fastapi-templ"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "psycopg>=3.2.8",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-async>=0.1.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]
